--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "local-tfjs-models",
-  "version": "0.0.0-rc.1",
+  "version": "0.0.0-rc.2",
   "description": "local tfjs models assets",
   "files": [
     "blazeface",
     "facemesh",
-    "bilibili"
+    "imagescore"
   ],
   "repository": {
     "type": "git",
