--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "local-tfjs-models",
-  "version": "0.0.0-rc.2",
+  "version": "0.0.1",
   "description": "local tfjs models assets",
   "files": [
     "blazeface",
